@@ -1,3 +1,8 @@
+2006-07-31  Stefan Siegl  <stesie@brokenpipe.de>
+
+	* options.c (trivfs_append_args): Figure out the address of the default
+	gateway and push the --gateway option to argz.
+
 2006-04-27  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* ethernet.c (ether_filter) [NETF_IN]: Prefix `NETF_IN' to the actual
